--- a/src/content/partners/_meta.mdx
+++ b/src/content/partners/_meta.mdx
@@ -1,6 +1,6 @@
 ---
 heading: "Our Clients"
 description: "A sample of client relationships..."
-hasPage: false
+hasPage: true
 itemsHasPage: false
 ---
