--- a/src/content/partners/_meta.mdx
+++ b/src/content/partners/_meta.mdx
@@ -3,4 +3,11 @@ heading: "Our Clients"
 description: "A sample of client relationships..."
 hasPage: true
 itemsHasPage: false
+layout: "../../layouts/Partners.astro"
+defaultSection:
+    headingAreaClass: hidden
+    component: "LogoLoop"
+    contentClass: "w-full flex justify-center"
+    itemsClass: flex h-full
 ---
+ergwfarww
