--- a/src/content/partners/_meta.mdx
+++ b/src/content/partners/_meta.mdx
@@ -9,5 +9,6 @@ defaultSection:
     component: "LogoLoop"
     contentClass: "w-full flex justify-center"
     itemsClass: flex h-full
+    buttonsSectionClass: "hidden"
 ---
 ergwfarww
