new folder structure

--- a/src/content/partners/_meta.mdx
+++ b/src/content/partners/_meta.mdx
@@ -3,7 +3,7 @@ heading: "Our Clients"
 description: "A sample of client relationships..."
 hasPage: true
 itemsHasPage: false
-layout: "../../layouts/Partners.astro"
+layout: "../../layouts/PageLayouts/Partners.astro"
 defaultSection:
     headingAreaClass: hidden
     component: "LogoLoop"
